--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -1,5 +1,6 @@
 #@ def steps_build():
 name: Build
+shell: bash
 run: |
   echo "Branch: $GITHUB_HEAD_REF"
   if [[ "$GITHUB_HEAD_REF" == "master" ]]; then
@@ -10,6 +11,7 @@ run: |
 ---
 #@ def steps_genupdate():
 name: "Generate Update"
+shell: bash
 run: state run generate-update
 #@ end
 
@@ -23,6 +25,7 @@ with:
 ---
 #@ def steps_installstate():
 name: "Install State Tool"
+shell: bash
 run: |
   ./installers/install.sh -n -b master
   echo "::add-path::$HOME/.local/bin"
@@ -30,11 +33,13 @@ run: |
 ---
 #@ def steps_preprocess():
 name: "Preprocess"
+shell: bash
 run: state run preprocess
 #@ end
 ---
 #@ def steps_inttest():
 name: "Integration Tests"
+shell: bash
 run: go test -timeout 20m ./test/integration -v
 #@ end
 ---
@@ -43,6 +48,7 @@ name: "Upload Artifacts"
 uses: actions/upload-artifact@v2
 with:
   name: build
+  shell: bash
   path: build/
 #@ end
 ---
@@ -51,15 +57,47 @@ name: "Download Artifacts"
 uses: actions/download-artifact@v2
 with:
   name: build
+  shell: bash
   path: build/
 #@ end
 ---
 #@ def steps_deploy():
 name: "Deploy"
+shell: bash
 run: |
   state run deploy-updates
-  state run deploy-installers
+  if [[ "$GITHUB_HEAD_REF" == "master" ]]; then
+    state run deploy-installers
+  fi
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#@ end
+---
+#@ def steps_build_state_msi():
+name: "Build State MSI"
+shell: bash
+run: |
+  echo $MSI_CERT_BASE64 | base64 -Dd > Cert.p12
+  export PATH=/c/Program\ Files\ \(x86\)/WiX\ Toolset\ v3.11/bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
+  state run build-msi-state
+  signtool.exe sign -d "ActiveState State Tool" -f "Cert.p12" -p ${CODE_SIGNING_PASSWD} build/state_tool.msi
+env:
+  CODE_SIGNING_PASSWD: ${{ secrets.CODE_SIGNING_PASSWD }}
+  MSI_CERT_BASE64: ${{ secrets.MSI_CERT_BASE64 }}
+#@ end
+---
+#@ def steps_build_languages_msi():
+name: "Build Languages MSI"
+shell: bash
+run: |
+  echo $MSI_CERT_BASE64 | base64 -Dd > Cert.p12
+  export PATH=/c/Program\ Files\ \(x86\)/Microsoft\ Visual\ Studio/2019/Enterprise/MSBuild/Current/Bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
+  state run build-msi-language ActivePerl-5.26 http://docs.activestate.com/activeperl/5.26/get/relnotes/
+  signtool.exe sign -d "ActiveState Language Installer" -f "Cert.p12" -p ${CODE_SIGNING_PASSWD} ./build/ActivePerl-5.26.msi
+  state run build-msi-language ActivePerl-5.28 http://docs.activestate.com/activeperl/5.28/get/relnotes/
+  signtool.exe sign -d "ActiveState Language Installer" -f "Cert.p12" -p ${CODE_SIGNING_PASSWD} ./build/ActivePerl-5.28.msi
+env:
+  CODE_SIGNING_PASSWD: ${{ secrets.CODE_SIGNING_PASSWD }}
+  MSI_CERT_BASE64: ${{ secrets.MSI_CERT_BASE64 }}
 #@ end
