--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -10,12 +10,12 @@ jobs:
         go-version:
         - 1.13.x
         platform:
-        - ubuntu-latest
-        - macos-latest
+        - windows-latest
     runs-on: ${{ matrix.platform }}
     env:
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
       GOFLAGS: -mod=vendor
+      SHELL: bash
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -24,10 +24,12 @@ jobs:
       with:
         go-version: ${{ matrix.go-version }}
     - name: Install State Tool
+      shell: bash
       run: |
         ./installers/install.sh -n -b master
         echo "::add-path::$HOME/.local/bin"
     - name: Build
+      shell: bash
       run: |
         echo "Branch: $GITHUB_HEAD_REF"
         if [[ "$GITHUB_HEAD_REF" == "master" ]]; then
@@ -35,4 +37,5 @@ jobs:
         fi
         state run build
     - name: Integration Tests
+      shell: bash
       run: go test -timeout 20m ./test/integration -v
