Set timeouts, fix shell input

--- a/.github/workflows-src/jobs.lib.yml
+++ b/.github/workflows-src/jobs.lib.yml
@@ -16,6 +16,7 @@ name: Build
 strategy: *strategy
 runs-on: *runs-on
 env: *env
+timeout-minutes: 5
 steps:
   - name: "Checkout code"
     uses: actions/checkout@v2
@@ -31,6 +32,7 @@ name: Build MSI's
 runs-on: windows-latest
 needs: build
 env: *env
+timeout-minutes: 5
 steps:
   - name: "Checkout code"
     uses: actions/checkout@v2
@@ -47,6 +49,7 @@ name: "Unit Test"
 strategy: *strategy
 runs-on: *runs-on
 env: *env
+timeout-minutes: 5
 steps:
   - name: "Checkout code"
     uses: actions/checkout@v2
@@ -61,6 +64,7 @@ name: "Integration Test"
 strategy: *strategy
 runs-on: *runs-on
 env: *env
+timeout-minutes: 15
 steps:
   - name: "Checkout code"
     uses: actions/checkout@v2
@@ -75,6 +79,7 @@ name: Deploy
 needs: [ build, build_msi, unittest ]
 runs-on: ubuntu-latest
 env: *env
+timeout-minutes: 5
 steps:
   - name: "Checkout code"
     uses: actions/checkout@v2
