--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -10,6 +10,8 @@ jobs:
         go-version:
         - 1.13.x
         platform:
+        - ubuntu-latest
+        - macos-latest
         - windows-latest
     runs-on: ${{ matrix.platform }}
     env:
