--- a/activestate.yaml
+++ b/activestate.yaml
@@ -38,26 +38,26 @@ scripts:
     description: Builds the project with the host OS as the target OS.
     value: |
       set -e
-      $scripts.preprocess
+      $constants.SET_ENV
       go build -tags "$GO_BUILD_TAGS" -o $constants.BUILD_TARGET $constants.CLI_BUILDFLAGS $constants.CLI_PKGS
   - name: build-for
     description: Builds the project with the specified OS as the target OS. (valid values darwin, linux, windows)
     value: |
       set -e
-      $scripts.preprocess
+      $constants.SET_ENV
       export GOOS=${1}
       go build -tags "internal $GO_BUILD_TAGS" -o $constants.BUILD_TARGET $constants.CLI_BUILDFLAGS $constants.CLI_PKGS
   - name: generate-update
     description: Generate update files
     value: |
       set -e
-      $scripts.preprocess
+      $constants.SET_ENV
       mkdir -p build/update
       go run scripts/update-generator/main.go -o build/update $constants.BUILD_TARGET
   - name: install
     description: Installs the current HEAD version into GOBIN
     value: |
-      $scripts.preprocess
+      $constants.SET_ENV
       go install $constants.CLI_BUILDFLAGS $CLI_PKGS
   - name: deploy-updates
     description: Deploys update files to S3. This steps is automated by CI and should never be ran manually unless you KNOW WHAT YOU'RE DOING.
