Don't care if files don't exist

--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -111,5 +111,5 @@ env:
 #@ def steps_cleanbuild():
 name: "Cleanup Build Dir"
 shell: bash
-run: rm build/state*
+run: rm build/state* || true
 #@ end
