--- a/activestate.yaml
+++ b/activestate.yaml
@@ -118,7 +118,7 @@ scripts:
       go build -o ./installers/msi-state/rmpath/rmpath.exe $constants.CLI_BUILDFLAGS ./installers/msi-state/rmpath/main.go
       candle.exe ./installers/msi-state/install.wxs -o ./installers/msi-state/install.wixobj -ext WixUIExtension -ext WixUtilExtension
       light.exe ./installers/msi-state/install.wixobj -o ./build/msi/state_tool.msi -sice:ICE91 -sice:ICE64 -ext WixUIExtension -ext WixUtilExtension
-      rm ./build/msi/state_tool.wixpdb
+      rm ./build/msi/state_tool.wixpdb || true
   - name: build-msi-language
     description: Builds the language MSI, requires that you have .NET 4.x installed and on PATH
     standalone: true
