--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -27,11 +27,12 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: ${{ matrix.go-version }}
-    - name: Install State Tool
+    - name: Setup
       shell: bash
       run: |
-        ./installers/install.sh -n -b master
-        echo "::add-path::$HOME/.local/bin"
+        bin=$(pwd)/.github/deps/${{ runner.os }}/bin
+        echo "Adding $bin to PATH"
+        echo "::add-path::$bin"
     - name: Preprocess
       shell: bash
       run: state run preprocess
