--- a/activestate.yaml
+++ b/activestate.yaml
@@ -118,8 +118,8 @@ scripts:
       os: windows
     value: |
       set -e
-      if [ "$#" -ne 2 ]; then
-        echo "Required Arguments: <Project Name> <Release Notes URL> (must be under the ActiveState org)"
+      if [ "$#" -ne 3 ]; then
+        echo "Required Arguments: <Project Name> <Release Notes URL> (must be under the ActiveState org) <Shortcuts> (comma-separated list of shortcuts to build)"
         exit 1
       fi
       export GOFLAGS='-mod=vendor'
@@ -127,7 +127,9 @@ scripts:
       cp installers/msi-language/Product.p.wxs installers/msi-language/Product.wxs
       sed -i "s^{{PROJECT}}^${1}^g" installers/msi-language/Product.wxs
       sed -i "s^{{REL_NOTES}}^${2}^g" installers/msi-language/Product.wxs
+      sed -i "s^{{SHORTCUTS}}^${3}^g" installers/msi-language/Product.wxs
       sed -i "s^{{ID}}^$(go run scripts/uuid-generator/main.go $1)^g" installers/msi-language/Product.wxs
+
       msbuild.exe installers/msi-language/Deploy.wixproj /target:Build "//p:Configuration=Release;Platform=x64;RunWixToolsOutOfProc=true;OutDir=$dir\\build\\msi-language\\"
       echo "Copying MSI to build/${1}.msi"
       cp build/msi-language/en-us/Deploy.msi "build/${1}.msi"
