--- a/.github/workflows-src/build.yml
+++ b/.github/workflows-src/build.yml
@@ -1,4 +1,5 @@
-#@ load("jobs.lib.yml", "jobs_build", "jobs_build_msi", "jobs_deploy", "jobs_unittest")
+#@ load("jobs.lib.yml", "jobs_build", "jobs_build_msi", "jobs_deploy", "jobs_unittest", "jobs_inttest")
+#@ load("@ytt:template", "template")
 name: Build-Test-Deploy
 
 "on":
@@ -11,4 +12,7 @@ jobs:
   build: #@ jobs_build()
   build_msi: #@ jobs_build_msi()
   unittest: #@ jobs_unittest()
+  inttest:
+    if: 'contains(github.event.pull_request.labels.*.name, "run: integration tests")'
+    _: #@ template.replace(jobs_inttest())
   deploy: #@ jobs_deploy()
