--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -148,6 +148,51 @@ jobs:
       shell: bash
       run: |
         go test -v `go list ./... | grep -v api | grep -v integration | grep -v expect`
+  inttest:
+    if: 'contains(github.event.pull_request.labels.*.name, "run: integration tests")'
+    name: Integration Test
+    strategy:
+      matrix:
+        go-version:
+        - 1.13.x
+        platform:
+        - ubuntu-latest
+        - macos-latest
+        - windows-latest
+    runs-on: ${{ matrix.platform }}
+    env:
+      ACTIVESTATE_CLI_DISABLE_RUNTIME: true
+      GOFLAGS: -mod=vendor
+      SHELL: bash
+      GITHUB_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    timeout-minutes: 15
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Install Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: ${{ matrix.go-version }}
+    - name: Setup
+      shell: bash
+      run: |
+        bin=$(pwd)/.github/deps/${{ runner.os }}/bin
+        echo "Adding $bin to PATH"
+        echo "::add-path::$bin"
+    - name: Preprocess
+      shell: bash
+      run: state run preprocess
+    - name: Build
+      shell: bash
+      run: |
+        echo "Branch: $GITHUB_HEAD_REF"
+        if [[ "$GITHUB_HEAD_REF" == "master" ]]; then
+          export BRANCH_OVERRIDE=unstable
+        fi
+        state run build
+    - name: Integration Tests
+      shell: bash
+      run: go test -timeout 20m ./test/integration -v
   deploy:
     name: Deploy
     needs:
