--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -149,7 +149,7 @@ jobs:
       run: |
         go test -v `go list ./... | grep -v api | grep -v integration | grep -v expect`
   inttest:
-    if: 'contains(github.event.pull_request.labels.*.name, "run\: integration tests")'
+    if: contains(github.event.pull_request.labels.*.name, "run integration tests")
     name: Integration Test
     strategy:
       matrix:
